--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
   </div>
 
-  <body>
+  </body>
     
    <footer> 
      <p> Music used: https://www.youtube.com/watch?v=wR3gaYTqkDQ </p>
